added link to homepage

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <footer class="text-center mt-auto py-3">
-        Created by Shay Power
+        <a href="/">Created by Shay Power</a>
     </footer>
 
     <script src="script.js"></script>
